@@ -8,7 +8,6 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.beans.factory.annotation.Value;
@@ -17,7 +16,6 @@ import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
 import java.util.Collections;
-import java.util.List;
 
 
 @Component
@@ -56,7 +54,7 @@ public class JwtFilter extends OncePerRequestFilter {
                         new UsernamePasswordAuthenticationToken(
                                 user,
                                 null,
-                                List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().toUpperCase()))
+                                Collections.emptyList()
                         );
 
                 authToken.setDetails(
@@ -65,6 +63,21 @@ public class JwtFilter extends OncePerRequestFilter {
 
                 // 5. Set context
                 SecurityContextHolder.getContext().setAuthentication(authToken);
+            }
+        }
+
+        // 6. Kiểm tra quyền truy cập Admin cho các endpoint /api/admin/**
+        String path = request.getRequestURI();
+        if (path.startsWith("/api/admin/")) {
+            var auth = SecurityContextHolder.getContext().getAuthentication();
+            if (auth != null && auth.isAuthenticated() && auth.getPrincipal() instanceof User) {
+                User principal = (User) auth.getPrincipal();
+                if (principal.getRole() == null || !principal.getRole().equalsIgnoreCase("ADMIN")) {
+                    response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+                    response.setContentType("application/json;charset=UTF-8");
+                    response.getWriter().write("{\"message\": \"Access denied. Only the administrator is allowed.\"}");
+                    return;
+                }
             }
         }
 
